interpreter-tkk-main/interpreterFixed/gramatykaParser.py
# Generated from gramatyka.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatykaParser ( Parser ):

    grammarFileName = "gramatyka.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'write'", "'write('", "')'", "'get'", 
                     "'get('", "'else'", "'if'", "'unless'", "'equal'", 
                     "'to'", "'not'", "'less'", "'than'", "'or'", "'greater'", 
                     "'('", "'is'", "'and'", "'+'", "'-'", "'*'", "'/'", 
                     "'while'", "'until'", "'times'", "'function'", "'returns'", 
                     "'nothing'", "','", "':'", "'{'", "'}'", "'return'", 
                     "'number'", "'string'", "'character'", "'boolean'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Identifier", "String_literal", 
                      "Number_literal", "Boolean_literal", "WS", "COMMENT", 
                      "EOL" ]

    RULE_start = 0
    RULE_statement = 1
    RULE_write_statement = 2
    RULE_get_statement = 3
    RULE_logic_statement = 4
    RULE_logic_keyword = 5
    RULE_comparison_operator = 6
    RULE_expression = 7
    RULE_arithmetic_expression = 8
    RULE_term = 9
    RULE_factor = 10
    RULE_loop_statement = 11
    RULE_variable_definition = 12
    RULE_function_definition = 13
    RULE_function_call = 14
    RULE_arguments = 15
    RULE_argument_list = 16
    RULE_parameterList = 17
    RULE_scope_body = 18
    RULE_function_scope_body = 19
    RULE_type = 20

    ruleNames =  [ "start", "statement", "write_statement", "get_statement", 
                   "logic_statement", "logic_keyword", "comparison_operator", 
                   "expression", "arithmetic_expression", "term", "factor", 
                   "loop_statement", "variable_definition", "function_definition", 
                   "function_call", "arguments", "argument_list", "parameterList", 
                   "scope_body", "function_scope_body", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    Identifier=38
    String_literal=39
    Number_literal=40
    Boolean_literal=41
    WS=42
    COMMENT=43
    EOL=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(gramatykaParser.EOF, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(gramatykaParser.EOL)
            else:
                return self.getToken(gramatykaParser.EOL, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.StatementContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.StatementContext,i)


        def COMMENT(self):
            return self.getToken(gramatykaParser.COMMENT, 0)

        def getRuleIndex(self):
            return gramatykaParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = gramatykaParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 42
                self.match(gramatykaParser.EOL)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.statement()
                    self.state = 50 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 49
                        self.match(gramatykaParser.EOL)
                        self.state = 52 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==44):
                            break
             
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4380958982582) != 0):
                self.state = 59
                self.statement()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==43:
                    self.state = 60
                    self.match(gramatykaParser.COMMENT)




            self.state = 65
            self.match(gramatykaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def write_statement(self):
            return self.getTypedRuleContext(gramatykaParser.Write_statementContext,0)


        def get_statement(self):
            return self.getTypedRuleContext(gramatykaParser.Get_statementContext,0)


        def logic_statement(self):
            return self.getTypedRuleContext(gramatykaParser.Logic_statementContext,0)


        def loop_statement(self):
            return self.getTypedRuleContext(gramatykaParser.Loop_statementContext,0)


        def variable_definition(self):
            return self.getTypedRuleContext(gramatykaParser.Variable_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(gramatykaParser.Function_definitionContext,0)


        def expression(self):
            return self.getTypedRuleContext(gramatykaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramatykaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = gramatykaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.write_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.get_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.logic_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.loop_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.variable_definition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.function_definition()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramatykaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramatykaParser.RULE_write_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_statement" ):
                listener.enterWrite_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_statement" ):
                listener.exitWrite_statement(self)




    def write_statement(self):

        localctx = gramatykaParser.Write_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_write_statement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(gramatykaParser.T__0)
                self.state = 77
                self.expression(0)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(gramatykaParser.T__1)
                self.state = 79
                self.expression(0)
                self.state = 80
                self.match(gramatykaParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Get_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(gramatykaParser.Identifier, 0)

        def getRuleIndex(self):
            return gramatykaParser.RULE_get_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_statement" ):
                listener.enterGet_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_statement" ):
                listener.exitGet_statement(self)




    def get_statement(self):

        localctx = gramatykaParser.Get_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_get_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(gramatykaParser.T__3)
                self.state = 85
                self.match(gramatykaParser.Identifier)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.match(gramatykaParser.T__4)
                self.state = 87
                self.match(gramatykaParser.Identifier)
                self.state = 88
                self.match(gramatykaParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logic_keyword(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.Logic_keywordContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.Logic_keywordContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.ExpressionContext,i)


        def scope_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.Scope_bodyContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.Scope_bodyContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(gramatykaParser.EOL)
            else:
                return self.getToken(gramatykaParser.EOL, i)

        def getRuleIndex(self):
            return gramatykaParser.RULE_logic_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_statement" ):
                listener.enterLogic_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_statement" ):
                listener.exitLogic_statement(self)




    def logic_statement(self):

        localctx = gramatykaParser.Logic_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_logic_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.logic_keyword()
            self.state = 92
            self.expression(0)
            self.state = 93
            self.scope_body()
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 94
                self.match(gramatykaParser.EOL)


            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    self.match(gramatykaParser.T__5)
                    self.state = 98
                    self.logic_keyword()
                    self.state = 99
                    self.expression(0)
                    self.state = 100
                    self.scope_body()
                    self.state = 102
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 101
                        self.match(gramatykaParser.EOL)

             
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 109
                self.match(gramatykaParser.T__5)
                self.state = 110
                self.scope_body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_keywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatykaParser.RULE_logic_keyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_keyword" ):
                listener.enterLogic_keyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_keyword" ):
                listener.exitLogic_keyword(self)




    def logic_keyword(self):

        localctx = gramatykaParser.Logic_keywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logic_keyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comparison_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatykaParser.RULE_comparison_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_operator" ):
                listener.enterComparison_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_operator" ):
                listener.exitComparison_operator(self)




    def comparison_operator(self):

        localctx = gramatykaParser.Comparison_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparison_operator)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(gramatykaParser.T__8)
                self.state = 116
                self.match(gramatykaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.match(gramatykaParser.T__10)
                self.state = 118
                self.match(gramatykaParser.T__8)
                self.state = 119
                self.match(gramatykaParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(gramatykaParser.T__11)
                self.state = 121
                self.match(gramatykaParser.T__12)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 122
                self.match(gramatykaParser.T__10)
                self.state = 123
                self.match(gramatykaParser.T__11)
                self.state = 124
                self.match(gramatykaParser.T__12)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(gramatykaParser.T__11)
                self.state = 126
                self.match(gramatykaParser.T__13)
                self.state = 127
                self.match(gramatykaParser.T__8)
                self.state = 128
                self.match(gramatykaParser.T__9)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.match(gramatykaParser.T__14)
                self.state = 130
                self.match(gramatykaParser.T__12)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 131
                self.match(gramatykaParser.T__10)
                self.state = 132
                self.match(gramatykaParser.T__14)
                self.state = 133
                self.match(gramatykaParser.T__12)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 134
                self.match(gramatykaParser.T__14)
                self.state = 135
                self.match(gramatykaParser.T__13)
                self.state = 136
                self.match(gramatykaParser.T__8)
                self.state = 137
                self.match(gramatykaParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(gramatykaParser.Function_callContext,0)


        def Identifier(self):
            return self.getToken(gramatykaParser.Identifier, 0)

        def String_literal(self):
            return self.getToken(gramatykaParser.String_literal, 0)

        def Number_literal(self):
            return self.getToken(gramatykaParser.Number_literal, 0)

        def Boolean_literal(self):
            return self.getToken(gramatykaParser.Boolean_literal, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.ExpressionContext,i)


        def arithmetic_expression(self):
            return self.getTypedRuleContext(gramatykaParser.Arithmetic_expressionContext,0)


        def comparison_operator(self):
            return self.getTypedRuleContext(gramatykaParser.Comparison_operatorContext,0)


        def getRuleIndex(self):
            return gramatykaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = gramatykaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 141
                self.function_call()
                pass

            elif la_ == 2:
                self.state = 142
                self.match(gramatykaParser.Identifier)
                pass

            elif la_ == 3:
                self.state = 143
                self.match(gramatykaParser.String_literal)
                pass

            elif la_ == 4:
                self.state = 144
                self.match(gramatykaParser.Number_literal)
                pass

            elif la_ == 5:
                self.state = 145
                self.match(gramatykaParser.Boolean_literal)
                pass

            elif la_ == 6:
                self.state = 146
                self.match(gramatykaParser.T__15)
                self.state = 147
                self.expression(0)
                self.state = 148
                self.match(gramatykaParser.T__2)
                pass

            elif la_ == 7:
                self.state = 150
                self.arithmetic_expression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 166
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 164
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
                    if la_ == 1:
                        localctx = gramatykaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 153
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 154
                        self.match(gramatykaParser.T__16)
                        self.state = 155
                        self.comparison_operator()
                        self.state = 156
                        self.expression(4)
                        pass

                    elif la_ == 2:
                        localctx = gramatykaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 158
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 159
                        self.match(gramatykaParser.T__13)
                        self.state = 160
                        self.expression(3)
                        pass

                    elif la_ == 3:
                        localctx = gramatykaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 161
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 162
                        self.match(gramatykaParser.T__17)
                        self.state = 163
                        self.expression(2)
                        pass

             
                self.state = 168
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Arithmetic_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.TermContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.TermContext,i)


        def getRuleIndex(self):
            return gramatykaParser.RULE_arithmetic_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmetic_expression" ):
                listener.enterArithmetic_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmetic_expression" ):
                listener.exitArithmetic_expression(self)




    def arithmetic_expression(self):

        localctx = gramatykaParser.Arithmetic_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arithmetic_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.term()
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 170
                    _la = self._input.LA(1)
                    if not(_la==19 or _la==20):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 171
                    self.term() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatykaParser.FactorContext)
            else:
                return self.getTypedRuleContext(gramatykaParser.FactorContext,i)


        def getRuleIndex(self):
            return gramatykaParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = gramatykaParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.factor()
            self.state = 182
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 178
                    _la = self._input.LA(1)
                    if not(_la==21 or _la==22):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 179
                    self.factor() 
                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_call(self):
            return self.getTypedRuleContext(gramatykaParser.Function_callContext,0)


        def Identifier(self):
            return self.getToken(gramatykaParser.Identifier, 0)

        def String_literal(self):
            return self.getToken(gramatykaParser.String_literal, 0)

        def Number_literal(self):
            return self.getToken(gramatykaParser.Number_literal, 0)

        def expression(self):
            return self.getTypedRuleContext(gramatykaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return gramatykaParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = gramatykaParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_factor)
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.function_call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(gramatykaParser.Identifier)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                self.match(gramatykaParser.String_literal)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 188
                self.match(gramatykaParser.Number_literal)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 189
                self.match(gramatykaParser.T__15)
                self.state = 190
                self.expression(0)
                self.state = 191
                self.match(gramatykaParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(gramatykaParser.ExpressionContext,0)


        def scope_body(self):
            return self.getTypedRuleContext(gramatykaParser.Scope_bodyContext,0)


        def Number_literal(self):
            return self.getToken(gramatykaParser.Number_literal, 0)

        def getRuleIndex(self):
            return gramatykaParser.RULE_loop_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop_statement" ):
                listener.enterLoop_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop_statement" ):
                listener.exitLoop_statement(self)




    def loop_statement(self):
